Fix for stats page overflow.

--- a/src/App.css
+++ b/src/App.css
@@ -167,7 +167,7 @@
 }
 
 .MuiExpansionPanelSummary-content > p {
-  padding-top: 5px;
+  padding-top: 10px;
   color: rgb(152, 150, 150);
   font-size: 15px;
   font-weight: bold;
